GorjanJovanovski/js/antlrGen/QLGrammarParser.js
// Generated from C:/xampp/htdocs/Software Construction/multi-ql/GorjanJovanovski\QLGrammar.g4 by ANTLR 4.5.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var QLGrammarListener = require('./QLGrammarListener').QLGrammarListener;
var QLGrammarVisitor = require('./QLGrammarVisitor').QLGrammarVisitor;

var grammarFileName = "QLGrammar.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "'form'", "'{'", "'}'", "'decimal'", "'integer'", 
                     "'boolean'", "'string'", "'money'", "'currency'", "'date'", 
                     "'='", "'if'", "'else'", "'('", "')'", 'null', 'null', 
                     'null', "'!'", 'null', 'null', 'null', 'null', "':'" ];

var symbolicNames = [ 'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', "MULTDIVOP", "ADDSUBOP", "BOOLOP", 
                      "NOTOP", "COMPOP", "BOOLCOMOP", "TYPE", "BOOLEAN", 
                      "DELIMITER", "LABEL", "NEWLINE", "NUMBER", "DECIMAL", 
                      "WHITESPACE", "BRACKETS", "STRING" ];

var ruleNames =  [ "form", "block", "blockstmt", "question", "computedquestion", 
                   "ifstmt", "expr" ];

function QLGrammarParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

QLGrammarParser.prototype = Object.create(antlr4.Parser.prototype);
QLGrammarParser.prototype.constructor = QLGrammarParser;

Object.defineProperty(QLGrammarParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

QLGrammarParser.EOF = antlr4.Token.EOF;
QLGrammarParser.T__0 = 1;
QLGrammarParser.T__1 = 2;
QLGrammarParser.T__2 = 3;
QLGrammarParser.T__3 = 4;
QLGrammarParser.T__4 = 5;
QLGrammarParser.T__5 = 6;
QLGrammarParser.T__6 = 7;
QLGrammarParser.T__7 = 8;
QLGrammarParser.T__8 = 9;
QLGrammarParser.T__9 = 10;
QLGrammarParser.T__10 = 11;
QLGrammarParser.T__11 = 12;
QLGrammarParser.T__12 = 13;
QLGrammarParser.T__13 = 14;
QLGrammarParser.T__14 = 15;
QLGrammarParser.MULTDIVOP = 16;
QLGrammarParser.ADDSUBOP = 17;
QLGrammarParser.BOOLOP = 18;
QLGrammarParser.NOTOP = 19;
QLGrammarParser.COMPOP = 20;
QLGrammarParser.BOOLCOMOP = 21;
QLGrammarParser.TYPE = 22;
QLGrammarParser.BOOLEAN = 23;
QLGrammarParser.DELIMITER = 24;
QLGrammarParser.LABEL = 25;
QLGrammarParser.NEWLINE = 26;
QLGrammarParser.NUMBER = 27;
QLGrammarParser.DECIMAL = 28;
QLGrammarParser.WHITESPACE = 29;
QLGrammarParser.BRACKETS = 30;
QLGrammarParser.STRING = 31;

QLGrammarParser.RULE_form = 0;
QLGrammarParser.RULE_block = 1;
QLGrammarParser.RULE_blockstmt = 2;
QLGrammarParser.RULE_question = 3;
QLGrammarParser.RULE_computedquestion = 4;
QLGrammarParser.RULE_ifstmt = 5;
QLGrammarParser.RULE_expr = 6;

function FormContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QLGrammarParser.RULE_form;
    this.FormNode = null
    this.lbl = null; // Token
    this.blk = null; // BlockContext
    return this;
}

FormContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FormContext.prototype.constructor = FormContext;

FormContext.prototype.LABEL = function() {
    return this.getToken(QLGrammarParser.LABEL, 0);
};

FormContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

FormContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLGrammarListener ) {
        listener.enterForm(this);
	}
};

FormContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLGrammarListener ) {
        listener.exitForm(this);
	}
};

FormContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLGrammarVisitor ) {
        return visitor.visitForm(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QLGrammarParser.FormContext = FormContext;

QLGrammarParser.prototype.form = function() {

    var localctx = new FormContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, QLGrammarParser.RULE_form);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 14;
        this.match(QLGrammarParser.T__0);
        this.state = 15;
        localctx.lbl = this.match(QLGrammarParser.LABEL);
        this.state = 16;
        localctx.blk = this.block();
        localctx.FormNode = new FormNode((localctx.lbl===null ? null : localctx.lbl.text), localctx.blk.BlockArray)
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QLGrammarParser.RULE_block;
    this.BlockArray = null
    this.blk = null; // BlockstmtContext
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.blockstmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BlockstmtContext);
    } else {
        return this.getTypedRuleContext(BlockstmtContext,i);
    }
};

BlockContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLGrammarListener ) {
        listener.enterBlock(this);
	}
};

BlockContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLGrammarListener ) {
        listener.exitBlock(this);
	}
};

BlockContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLGrammarVisitor ) {
        return visitor.visitBlock(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QLGrammarParser.BlockContext = BlockContext;

QLGrammarParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, QLGrammarParser.RULE_block);
     localctx.BlockArray =  new Array() 
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 19;
        this.match(QLGrammarParser.T__1);
        this.state = 25;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===QLGrammarParser.T__11 || _la===QLGrammarParser.STRING) {
            this.state = 20;
            localctx.blk = this.blockstmt();
            localctx.BlockArray.push(localctx.blk.ResultNode)
            this.state = 27;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 28;
        this.match(QLGrammarParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BlockstmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QLGrammarParser.RULE_blockstmt;
    this.ResultNode = null
    this.cq = null; // ComputedquestionContext
    this.q = null; // QuestionContext
    this.i = null; // IfstmtContext
    return this;
}

BlockstmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockstmtContext.prototype.constructor = BlockstmtContext;

BlockstmtContext.prototype.computedquestion = function() {
    return this.getTypedRuleContext(ComputedquestionContext,0);
};

BlockstmtContext.prototype.question = function() {
    return this.getTypedRuleContext(QuestionContext,0);
};

BlockstmtContext.prototype.ifstmt = function() {
    return this.getTypedRuleContext(IfstmtContext,0);
};

BlockstmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLGrammarListener ) {
        listener.enterBlockstmt(this);
	}
};

BlockstmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLGrammarListener ) {
        listener.exitBlockstmt(this);
	}
};

BlockstmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLGrammarVisitor ) {
        return visitor.visitBlockstmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QLGrammarParser.BlockstmtContext = BlockstmtContext;

QLGrammarParser.prototype.blockstmt = function() {

    var localctx = new BlockstmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, QLGrammarParser.RULE_blockstmt);
    try {
        this.state = 39;
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 30;
            localctx.cq = this.computedquestion();
            localctx.ResultNode = localctx.cq.ResultNode
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 33;
            localctx.q = this.question();
            localctx.ResultNode = localctx.q.ResultNode
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 36;
            localctx.i = this.ifstmt();
            localctx.ResultNode = localctx.i.ResultNode
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function QuestionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QLGrammarParser.RULE_question;
    this.ResultNode = null
    this.txt = null; // Token
    this.lbl = null; // Token
    return this;
}

QuestionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
QuestionContext.prototype.constructor = QuestionContext;

QuestionContext.prototype.DELIMITER = function() {
    return this.getToken(QLGrammarParser.DELIMITER, 0);
};

QuestionContext.prototype.STRING = function() {
    return this.getToken(QLGrammarParser.STRING, 0);
};

QuestionContext.prototype.LABEL = function() {
    return this.getToken(QLGrammarParser.LABEL, 0);
};

QuestionContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLGrammarListener ) {
        listener.enterQuestion(this);
	}
};

QuestionContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLGrammarListener ) {
        listener.exitQuestion(this);
	}
};

QuestionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLGrammarVisitor ) {
        return visitor.visitQuestion(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QLGrammarParser.QuestionContext = QuestionContext;

QLGrammarParser.prototype.question = function() {

    var localctx = new QuestionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, QLGrammarParser.RULE_question);
    try {
        this.state = 76;
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 41;
            localctx.txt = this.match(QLGrammarParser.STRING);
            this.state = 42;
            localctx.lbl = this.match(QLGrammarParser.LABEL);
            this.state = 43;
            this.match(QLGrammarParser.DELIMITER);
            this.state = 44;
            this.match(QLGrammarParser.T__3);
            localctx.ResultNode = new QuestionNode((localctx.txt===null ? null : localctx.txt.text), (localctx.lbl===null ? null : localctx.lbl.text), new DecimalType(), (localctx.txt === null ? 0 : localctx.txt.line))
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 46;
            localctx.txt = this.match(QLGrammarParser.STRING);
            this.state = 47;
            localctx.lbl = this.match(QLGrammarParser.LABEL);
            this.state = 48;
            this.match(QLGrammarParser.DELIMITER);
            this.state = 49;
            this.match(QLGrammarParser.T__4);
            localctx.ResultNode = new QuestionNode((localctx.txt===null ? null : localctx.txt.text), (localctx.lbl===null ? null : localctx.lbl.text), new NumberType(), (localctx.txt === null ? 0 : localctx.txt.line))
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 51;
            localctx.txt = this.match(QLGrammarParser.STRING);
            this.state = 52;
            localctx.lbl = this.match(QLGrammarParser.LABEL);
            this.state = 53;
            this.match(QLGrammarParser.DELIMITER);
            this.state = 54;
            this.match(QLGrammarParser.T__5);
            localctx.ResultNode = new QuestionNode((localctx.txt===null ? null : localctx.txt.text), (localctx.lbl===null ? null : localctx.lbl.text), new BooleanType(), (localctx.txt === null ? 0 : localctx.txt.line))
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 56;
            localctx.txt = this.match(QLGrammarParser.STRING);
            this.state = 57;
            localctx.lbl = this.match(QLGrammarParser.LABEL);
            this.state = 58;
            this.match(QLGrammarParser.DELIMITER);
            this.state = 59;
            this.match(QLGrammarParser.T__6);
            localctx.ResultNode = new QuestionNode((localctx.txt===null ? null : localctx.txt.text), (localctx.lbl===null ? null : localctx.lbl.text), new StringType(), (localctx.txt === null ? 0 : localctx.txt.line))
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 61;
            localctx.txt = this.match(QLGrammarParser.STRING);
            this.state = 62;
            localctx.lbl = this.match(QLGrammarParser.LABEL);
            this.state = 63;
            this.match(QLGrammarParser.DELIMITER);
            this.state = 64;
            this.match(QLGrammarParser.T__7);
            localctx.ResultNode = new QuestionNode((localctx.txt===null ? null : localctx.txt.text), (localctx.lbl===null ? null : localctx.lbl.text), new DecimalType(), (localctx.txt === null ? 0 : localctx.txt.line))
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 66;
            localctx.txt = this.match(QLGrammarParser.STRING);
            this.state = 67;
            localctx.lbl = this.match(QLGrammarParser.LABEL);
            this.state = 68;
            this.match(QLGrammarParser.DELIMITER);
            this.state = 69;
            this.match(QLGrammarParser.T__8);
            localctx.ResultNode = new QuestionNode((localctx.txt===null ? null : localctx.txt.text), (localctx.lbl===null ? null : localctx.lbl.text), new DecimalType(), (localctx.txt === null ? 0 : localctx.txt.line))
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 71;
            localctx.txt = this.match(QLGrammarParser.STRING);
            this.state = 72;
            localctx.lbl = this.match(QLGrammarParser.LABEL);
            this.state = 73;
            this.match(QLGrammarParser.DELIMITER);
            this.state = 74;
            this.match(QLGrammarParser.T__9);
            localctx.ResultNode = new QuestionNode((localctx.txt===null ? null : localctx.txt.text), (localctx.lbl===null ? null : localctx.lbl.text), new DateType(), (localctx.txt === null ? 0 : localctx.txt.line))
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ComputedquestionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QLGrammarParser.RULE_computedquestion;
    this.ResultNode = null
    this.txt = null; // Token
    this.lbl = null; // Token
    this.exp = null; // ExprContext
    return this;
}

ComputedquestionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ComputedquestionContext.prototype.constructor = ComputedquestionContext;

ComputedquestionContext.prototype.DELIMITER = function() {
    return this.getToken(QLGrammarParser.DELIMITER, 0);
};

ComputedquestionContext.prototype.STRING = function() {
    return this.getToken(QLGrammarParser.STRING, 0);
};

ComputedquestionContext.prototype.LABEL = function() {
    return this.getToken(QLGrammarParser.LABEL, 0);
};

ComputedquestionContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

ComputedquestionContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLGrammarListener ) {
        listener.enterComputedquestion(this);
	}
};

ComputedquestionContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLGrammarListener ) {
        listener.exitComputedquestion(this);
	}
};

ComputedquestionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLGrammarVisitor ) {
        return visitor.visitComputedquestion(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QLGrammarParser.ComputedquestionContext = ComputedquestionContext;

QLGrammarParser.prototype.computedquestion = function() {

    var localctx = new ComputedquestionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, QLGrammarParser.RULE_computedquestion);
    try {
        this.state = 134;
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 78;
            localctx.txt = this.match(QLGrammarParser.STRING);
            this.state = 79;
            localctx.lbl = this.match(QLGrammarParser.LABEL);
            this.state = 80;
            this.match(QLGrammarParser.DELIMITER);
            this.state = 81;
            this.match(QLGrammarParser.T__3);
            this.state = 82;
            this.match(QLGrammarParser.T__10);
            this.state = 83;
            localctx.exp = this.expr(0);
            localctx.ResultNode = new ComputedQuestionNode((localctx.txt===null ? null : localctx.txt.text), (localctx.lbl===null ? null : localctx.lbl.text), new FloatType(), (localctx.txt === null ? 0 : localctx.txt.line), localctx.exp.ExprNode)
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 86;
            localctx.txt = this.match(QLGrammarParser.STRING);
            this.state = 87;
            localctx.lbl = this.match(QLGrammarParser.LABEL);
            this.state = 88;
            this.match(QLGrammarParser.DELIMITER);
            this.state = 89;
            this.match(QLGrammarParser.T__4);
            this.state = 90;
            this.match(QLGrammarParser.T__10);
            this.state = 91;
            localctx.exp = this.expr(0);
            localctx.ResultNode = new ComputedQuestionNode((localctx.txt===null ? null : localctx.txt.text), (localctx.lbl===null ? null : localctx.lbl.text), new NumberType(), (localctx.txt === null ? 0 : localctx.txt.line), localctx.exp.ExprNode)
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 94;
            localctx.txt = this.match(QLGrammarParser.STRING);
            this.state = 95;
            localctx.lbl = this.match(QLGrammarParser.LABEL);
            this.state = 96;
            this.match(QLGrammarParser.DELIMITER);
            this.state = 97;
            this.match(QLGrammarParser.T__5);
            this.state = 98;
            this.match(QLGrammarParser.T__10);
            this.state = 99;
            localctx.exp = this.expr(0);
            localctx.ResultNode = new ComputedQuestionNode((localctx.txt===null ? null : localctx.txt.text), (localctx.lbl===null ? null : localctx.lbl.text), new BooleanType(), (localctx.txt === null ? 0 : localctx.txt.line), localctx.exp.ExprNode)
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 102;
            localctx.txt = this.match(QLGrammarParser.STRING);
            this.state = 103;
            localctx.lbl = this.match(QLGrammarParser.LABEL);
            this.state = 104;
            this.match(QLGrammarParser.DELIMITER);
            this.state = 105;
            this.match(QLGrammarParser.T__6);
            this.state = 106;
            this.match(QLGrammarParser.T__10);
            this.state = 107;
            localctx.exp = this.expr(0);
            localctx.ResultNode = new ComputedQuestionNode((localctx.txt===null ? null : localctx.txt.text), (localctx.lbl===null ? null : localctx.lbl.text), new StringType(), (localctx.txt === null ? 0 : localctx.txt.line), localctx.exp.ExprNode)
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 110;
            localctx.txt = this.match(QLGrammarParser.STRING);
            this.state = 111;
            localctx.lbl = this.match(QLGrammarParser.LABEL);
            this.state = 112;
            this.match(QLGrammarParser.DELIMITER);
            this.state = 113;
            this.match(QLGrammarParser.T__7);
            this.state = 114;
            this.match(QLGrammarParser.T__10);
            this.state = 115;
            localctx.exp = this.expr(0);
            localctx.ResultNode = new ComputedQuestionNode((localctx.txt===null ? null : localctx.txt.text), (localctx.lbl===null ? null : localctx.lbl.text), new MoneyType(), (localctx.txt === null ? 0 : localctx.txt.line), localctx.exp.ExprNode)
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 118;
            localctx.txt = this.match(QLGrammarParser.STRING);
            this.state = 119;
            localctx.lbl = this.match(QLGrammarParser.LABEL);
            this.state = 120;
            this.match(QLGrammarParser.DELIMITER);
            this.state = 121;
            this.match(QLGrammarParser.T__8);
            this.state = 122;
            this.match(QLGrammarParser.T__10);
            this.state = 123;
            localctx.exp = this.expr(0);
            localctx.ResultNode = new ComputedQuestionNode((localctx.txt===null ? null : localctx.txt.text), (localctx.lbl===null ? null : localctx.lbl.text), new CurrencyType(), (localctx.txt === null ? 0 : localctx.txt.line), localctx.exp.ExprNode)
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 126;
            localctx.txt = this.match(QLGrammarParser.STRING);
            this.state = 127;
            localctx.lbl = this.match(QLGrammarParser.LABEL);
            this.state = 128;
            this.match(QLGrammarParser.DELIMITER);
            this.state = 129;
            this.match(QLGrammarParser.T__9);
            this.state = 130;
            this.match(QLGrammarParser.T__10);
            this.state = 131;
            localctx.exp = this.expr(0);
            localctx.ResultNode = new ComputedQuestionNode((localctx.txt===null ? null : localctx.txt.text), (localctx.lbl===null ? null : localctx.lbl.text), new DateType(), (localctx.txt === null ? 0 : localctx.txt.line), localctx.exp.ExprNode)
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IfstmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QLGrammarParser.RULE_ifstmt;
    this.ResultNode = null
    this.exp = null; // ExprContext
    this.blk = null; // BlockContext
    this.elseque = null; // BlockContext
    return this;
}

IfstmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IfstmtContext.prototype.constructor = IfstmtContext;

IfstmtContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

IfstmtContext.prototype.block = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BlockContext);
    } else {
        return this.getTypedRuleContext(BlockContext,i);
    }
};

IfstmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof QLGrammarListener ) {
        listener.enterIfstmt(this);
	}
};

IfstmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof QLGrammarListener ) {
        listener.exitIfstmt(this);
	}
};

IfstmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QLGrammarVisitor ) {
        return visitor.visitIfstmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QLGrammarParser.IfstmtContext = IfstmtContext;

QLGrammarParser.prototype.ifstmt = function() {

    var localctx = new IfstmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, QLGrammarParser.RULE_ifstmt);
    try {
        this.state = 148;
        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 136;
            this.match(QLGrammarParser.T__11);
            this.state = 137;
            localctx.exp = this.expr(0);
            this.state = 138;
            localctx.blk = this.block();
            localctx.ResultNode = new ConditionNode(localctx.exp.ExprNode, localctx.blk.BlockArray, (localctx.exp===null ? null : localctx.exp.start).line)
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 141;
            this.match(QLGrammarParser.T__11);
            this.state = 142;
            localctx.exp = this.expr(0);
            this.state = 143;
            localctx.blk = this.block();
            this.state = 144;
            this.match(QLGrammarParser.T__12);
            this.state = 145;
            localctx.elseque = this.block();
            localctx.ResultNode = new ConditionNode(localctx.exp.ExprNode, localctx.blk.BlockArray, (localctx.exp===null ? null : localctx.exp.start).line, localctx.elseque.BlockArray)
            break;
